# ask-my-docs

./: .gitignore  AGENTS.md  README.md  pyproject.toml
basic_rag/: basic_rag.py
config/: settings.py
data/: chunker.py  sanity-check.py
data/loaders/: sitemap_loader.py
docs/: decisions.md
evaluation/: generate_test_set.py  test_set.json
helpers/: chunk_ids.py  embedding_factory.py  llm_factory.py  vector_store_factory.py
tests/: test_basic_rag.py  test_chunk_ids.py
