[project]
name = "ask-my-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-qdrant>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-huggingface>=0.3.0",
    "requests>=2.34.2",
]
